  * Fix clone removing all other blocks instead of adding them (Closes:
    #820044). Thanks to James Clarke.
  * Use a supported version of debhelper and switch to dh $@ style rules
    (Closes: #800287)
  * debbugs-web now Breaks/Replaces debbugs (<< 2.4.2) (Closes: #717967)
  * Split source file properly (Closes: #858671). Thanks to James McCoy.
  * Prefix 'src:' to all source package names.

  [ Niels Thykier ]
  * quitcgi() now returns 400/500 status codes instead of 200 (Closes: #584922)

  [Thanks to Arnout Engelen: ]
  * Add Homepage (closes: #670555).
  * Fix VCS in control (closes: #670556).
  * Link to blocked bugs (closes: #670568).

  [ Mike Gabriel ]
  * /debian/control:
    + Add ${misc:Depends} to Depends.
  * /examples/apache.conf:
    - Assure in apache.conf example that documentation html pages get loaded
      (closes: #686943).
    - Rewrite rule example: http://<webhost>/<nnn> -> show bug report for
      bug <nnn>.
    - Be more generic, comment out rewrite rule that directly redirects
      http://<debbugs-webhost>/ to http://www.debian.org/Bugs.
    - Extend examples/apache.conf, add directory rules. Esp. allow Indexes to be
      overridden in /var/lib/debbugs/www/db to allow mod_expires apache
      configuration options in .htaccess.
  * Load bugs.css file in documentation html pages.
  * Fix sani function in scripts/errorlib. Generate html entities correctly
    (prepend ampersand, append semicolon).
  * Fix pkgindex.cgi concerning several issues: load proper Perl modules,
    replace usage of src_url and pkg_url by package_links, use
    html_tail from templates, use count_bugs everywhere, load bugs.css,
    fix global variable usage in html header (closes: #686940).
  * Add empty $gBugSubscriptionDomain variable to config file template.
  * Remove mailing list markers of the form [<list-name>] from the subject
    line to avoid duplication (and more) of the bug number when replying to
    bug postings.